tests/errors/sem_aug_sub_array.kt
fun main() {
var arr: Array<Int> = arrayOf(1, 2, 3)
arr -= 1
}
